# saliyLabsCsem2

lab1/: lab1sem2.c
lab2/: lab2sem2.c
lab4/: progalab4.c
lab5/: progalab5.c
lab6/: lab6.c
rgr/: CMakeLists.txt  main.c  matrix.c  matrix.h  matrix.txt
tests/: CMakeLists.txt  sorting.c  sorting.h  unit_tests.c
threads/: task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c  task5  task5.c  task6  task6.c
